--- a/index.org
+++ b/index.org
@@ -1,3 +1,4 @@
+
 #+TITLE:     Org-Mode Homepage
 #+LANGUAGE:  en
 #+EMAIL:     carsten at orgmode dot org
@@ -22,9 +23,9 @@ messages, BBDB entries, and any files related to the projects.  For
 printing and sharing of notes, an Org-mode file can be exported as a
 structured ASCII file, HTML, and LaTeX.
 
-* Current Version (6.04a) and Compatibility
+* Current Version (6.04b) and Compatibility
 
-The current version is 6.04a.  To see what has changed in recent
+The current version is 6.04b.  To see what has changed in recent
 releases, check this [[file:Changes.html][list of user-visible changes]].  These descriptions
 are extensive, to avoid that people will be printing the manual after
 each incremental release.  If you have an older version of the manual,
@@ -41,7 +42,7 @@ release.
 
 **** Distribution
 
-Download as [[file:org-6.04a.zip][zip file]] or [[file:org-6.04a.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.04b.zip][zip file]] or [[file:org-6.04b.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  A shell script to simplify upgrading to the newest release
 has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here]].
