--- a/Changes.org
+++ b/Changes.org
@@ -10,39 +10,6 @@
 #+LINK_UP: index.html
 #+LINK_HOME: http://orgmode.org
 
-* Version 6.05
-
-** Details
-*** Source code example editing expanded.
-
-The editing of source code in the proper major mode has been
-expanded.  It works now inside all kinds of constructs, for
-example
-
-#+begin_src org
-,#+HTML: this code can be edited in html-mode
-
-,#+BEGIN_HTML
-,Same here
-,#+BEGIN_HTML
-
-,#+LaTeX: this code can be edited in latex-mode
-
-,#+BEGIN_LaTeX
-,Same here
-,#+BEGIN_LaTeX
-
-,#+BEGIN_SRC fortran
-,Here we can edit in fortran-mode
-,#+END_SRC
-#+end_src
-
-In addition to that, the syntax that is used by Emacs Muse (<src>
-or <example> tags, even <literal> and <lisp>) works as well - in
-fact, I think you can call `org-edit-src-code' directly from
-Muse.  Hey, if you guys bind it to "C-c '" in Muse mode as well,
-this could be a nice convergence.
-
 * Version 6.04
 :PROPERTIES:
 :VISIBILITY: content
@@ -110,6 +77,27 @@ the example and setting the appropriate mode.  You need to exit
 editing by pressing "C-c '" again.  This is important, because
 lines that have syntactic meaning in Org will be quoted by
 calling this command.
+
+"C-c '" also edits include files, the setupfile in a =#+setufile=
+line, and all those little foreign snippets like:
+
+#+begin_src org
+,#+HTML: this code can be edited in html-mode
+
+,#+BEGIN_HTML
+,Same here
+,#+BEGIN_HTML
+
+,#+LaTeX: this code can be edited in latex-mode
+
+,#+BEGIN_LaTeX
+,Same here
+,#+BEGIN_LaTeX
+
+,#+BEGIN_SRC fortran
+,Here we can edit in fortran-mode
+,#+END_SRC
+#+end_src
 
 *** iCalendar now defines proper UIDs for entries
 
