--- a/index.org
+++ b/index.org
@@ -49,8 +49,9 @@ has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here
 
 **** Get the development version
 
-You can check out the latest Org development version by using git.  
-More information on this page: http://repo.or.cz/w/org-mode.git
+You can check out the latest Org development version (along with every
+release we ever had) by using git.  More information on this page:
+http://repo.or.cz/w/org-mode.git
 
 * Documentation
 ** Manual and Reference card
@@ -64,6 +65,11 @@ More information on this page: http://repo.or.cz/w/org-mode.git
      produced by Takeshi Okano.
    - The [[file:faq.org][FAQ]] is not very up-to-date, but may still answer some of your
      questions.  Please have a look before posting to emacs-orgmode@gnu.org.
+   - The Org manual is a GNU Manual released under the GFDL.  If you
+     want to redistribute Org with a distribution that does not allow
+     the GFDL to be used, and if you see no other way to resolve this
+     licensing conflict, you must use the special [[file:org_dual_license.texi][dual-license version]]
+     of the manual.
 
 * Links
 
